# hr1-monorepo

./: .gitignore  CLAUDE.md  FEATURE_PLAN.md  STRATEGIC_ASSESSMENT.md  STRATEGIC_REVIEW.md  TODO_NEXT_SPRINT.md  package-lock.json  package.json
.claude/: settings.json
.claude/commands/: review-admin.md  review-applicant.md  review-console.md  review-employee-web.md  review-employee.md  review.md  strategic-review.md
.github/workflows/: ci.yml
.husky/: pre-commit
docs/: HR-28_critical_security_fix_plan.md  application-status-flow.md  contract-flow.md  flutter-coding-guidelines.md  notifications.md  recruitment-feature-analysis.md  salesforce-research-crm-enhancement-plan.md  selection-steps-design.md
hr1-admin/: package-lock.json  package.json  vitest.config.ts
hr1-admin/src/: middleware.ts
hr1-applicant-app/: README.md  pubspec.yaml
hr1-applicant-app/lib/: app.dart  main.dart  main_prod.dart
hr1-console/: next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
hr1-employee-app/: README.md  pubspec.yaml
hr1-employee-web/: next.config.ts  package.json  tsconfig.json
hr1-lp/: .gitignore  .prettierrc  package-lock.json  package.json
hr1-mcp/: .env.example  pyproject.toml
hr1-mcp/src/hr1_mcp/: config.py  server.py  supabase_client.py
hr1-mcp/src/hr1_mcp/tools/: attendance.py  crm.py  dashboard.py  employees.py  organizations.py  recruitment.py
hr1_shared/: pubspec.yaml
samples/: companies_sample.csv  leads_sample.csv
scripts/: build-all-ipa.sh
supabase/: RLS_POLICIES.md  config.toml
(+1468 files in other folders)
